syntax= "proto3";

option go_package= "github.com/flydevs/chat-app-api/messaging-api/src/clients/rpc/users_client";

package flydev_chat_app_users;


service UsersProtoInterface{

    rpc GetUserByUuid(Uuid) returns (UserMsgResponse) {}
}

message Uuid {
    string uuid =1;
}

message User{
    int64 id =1;
    Uuid uuid =2;
    string login_user =3;
    string login_password =4;
}

message Svr_msg{
    int32 status=1;
    string message=2;
}

message UserMsgResponse{
    User user =1;
    Svr_msg msg =2;
}